# hexlet-django-blog

./: .gitignore  Makefile  pyproject.toml  setup.cfg
hexlet_django_blog/: settings.py  urls.py
hexlet_django_blog/templates/: about.html
